--- a/Templates/index.html
+++ b/Templates/index.html
@@ -29,6 +29,22 @@
         .form-check {
             margin-right: 15px;
         }
+
+        /* Styling for tabs */
+        .nav-tabs .nav-link.active, .nav-tabs .nav-link {
+            background-color: white;
+            color: #0d6efd;
+            border-color: #dee2e6;
+        }
+
+        .nav-tabs .nav-link.active {
+            background-color: #fff;
+            border-color: #dee2e6 #dee2e6 #fff;
+        }
+
+        .nav-tabs .nav-link:hover {
+            color: #0d6efd;
+        }
     </style>
 </head>
 <body>
@@ -36,13 +52,13 @@
         <h1 class="text-center mb-4">PTO Forecaster Tool</h1>
         <ul class="nav nav-tabs mb-4">
             <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('home') }}">Home</a>
+                <a class="nav-link {% if request.endpoint == 'home' %}active{% endif %}" href="{{ url_for('home') }}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('vacations_view') }}">Vacation and Holiday Input</a>
+                <a class="nav-link {% if request.endpoint == 'vacations_view' %}active{% endif %}" href="{{ url_for('vacations_view') }}">Vacation and Holiday Input</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('accruals_view') }}">PTO Accrual Rates</a>
+                <a class="nav-link {% if request.endpoint == 'accruals_view' %}active{% endif %}" href="{{ url_for('accruals_view') }}">PTO Accrual Rates</a>
             </li>
         </ul>
 
